fix: route closed-loop seeds by consumer